Texture Paint Stencil doesn't use assigned UV Layer #91557

Closed
opened 2021-09-21 08:35:06 +02:00 by Andrew Price · 11 comments

System Information
Operating system: Win 10
Graphics card: Titan RTX

Blender Version
Broken: 2.93a & 3.0
Broken: 2.83.17 (fb67495c7feb, 2021-06-16)
Worked: Not sure.

Short description of error
Despite assigning a different UV layer, stencil will only paint on primary UV layer.

Exact steps for others to reproduce the error
Video
stencil bug ii.mp4

Text version

  • Add a plane
  • Create a new UV layer and scale it by 6. (S, 6). Rename it "Stencil".
  • In the shader, create a new image to start painting
  • Go into Texture paint mode and under stencil choose any image (or use attached)
  • Choose the "Stencil" UV layer
  • Start painting and you'll see it will ignore the stencil and paint on the default UV layer.

Untitled-1.jpg

**System Information** Operating system: Win 10 Graphics card: Titan RTX **Blender Version** Broken: 2.93a & 3.0 Broken: 2.83.17 (`fb67495c7feb`, 2021-06-16) Worked: Not sure. **Short description of error** Despite assigning a different UV layer, stencil will only paint on primary UV layer. **Exact steps for others to reproduce the error** **Video** [stencil bug ii.mp4](https://archive.blender.org/developer/F10526756/stencil_bug_ii.mp4) **Text version** - Add a plane - Create a new UV layer and scale it by 6. (S, 6). Rename it "Stencil". - In the shader, create a new image to start painting - Go into Texture paint mode and under stencil choose any image (or use attached) - Choose the "Stencil" UV layer - Start painting and you'll see it will ignore the stencil and paint on the default UV layer. ![Untitled-1.jpg](https://archive.blender.org/developer/F10526751/Untitled-1.jpg)
Author

Added subscriber: @AndrewPrice

Added subscriber: @AndrewPrice
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2021-09-21 09:38:49 +02:00
Member

Will check.

Will check.

This issue was referenced by 08fe34b7fd

This issue was referenced by 08fe34b7fdc982af0b01b8a0fecf39ed3e31f367

This issue was referenced by 5b588282a6

This issue was referenced by 5b588282a68e0123a0a43e3965e361407b933fe7

This issue was referenced by f11bcb5a80

This issue was referenced by f11bcb5a80eb106560678c8c60be32ad997d6641
Contributor

Added subscriber: @Raimund58

Added subscriber: @Raimund58
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

Thanks heaps guys :)

Thanks heaps guys :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91557
No description provided.